<resources>
    <string name="app_name">DialogFlowApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_reset_appointment">Reset Appointment</string>
    <string name="btn_clear_response">Clear Response</string>
    <string name="btn_book_appointment">Book Appointment</string>
    <string name="text_default_appointment">I want Neurologist Appointment  on 25/4/2022 at 4:00 pm, Muscat branch</string>
    <string name="hint_appointment">Appointment</string>
    <string name="hint_response">Response</string>
    <string name="label_choose_dialog">choose dialog</string>


    <string name="btn_open_camera">Open Camera</string>
    <string name="btn_open_gallery">open gallery</string>


    <string name="menu_text_detection">Text Detection(OCR)</string>
    <string name="menu_lable_detection">Label Detection</string>
    <string name="landmark_det">Landmark Detection</string>
    <string name="menu_facial_detection">Facial Detection</string>
    <string name="menu_logo_detection">Logo Detection</string>
    <string name="menu_safe_search">Safe Search</string>
    <string name="menu_web_detection">Web Detection</string>
    <string name="menu_img_props">Image Properties</string>
    <string name="menu_crop_hints">Crop Hints</string>
    <string name="menu_object_locale">Object Localization</string>
    <string name="text_identified">Identified Text : </string>
    <string name="text_landmark">Landmarks : </string>
    <string name="text_logo">Logos : </string>
    <string name="text_safe">Safe Parameters : </string>
    <string name="text_web_links">Web Links : </string>
    <string name="text_img_porps">Image Properties : </string>
    <string name="text_obj_locale">Objects in Image : </string>
    <string name="text_face">Face Likely</string>
    <string name="btn_choose_image">Choose Image</string>
    <string name="btn_upload_image">Upload Image</string>
    <string name="label_labels">Labels</string>
    <string name="lable_3dots">3dots</string>

</resources>
